Upgrades gradle to v8.1.1, removes deprecated constructor calls